--- a/style.css
+++ b/style.css
@@ -50,14 +50,18 @@ h1    {
     margin-top: 2.56rem;
 }
 
-.services-btn   {
+#wash-car-btn,
+#mow-lawn-btn,
+#pull-weeds-btn {
     background-color: #f4d1d1;
     border: none;
     border-radius: 0.4rem;
     padding: 0.81rem 1.06rem;
 }
 
-.services-btn:active    {
+#mow-lawn-btn:active,
+#pull-weeds-btn:active,
+#wash-car-btn:active    {
     border: 0.125rem solid #FFFFFF;
 }
 
@@ -97,15 +101,6 @@ h4  {
 }
 
 #item-cost  {
-    font-family: Inter;
-    font-size: 1.5rem;
-    font-weight: 500;
-    letter-spacing: 0em;
-    text-align: right;
-    margin: 0px;
-}
-
-h4 > span {
     color: #9b8e8e;
     font-family: 'Inter';
     font-style: normal;
@@ -113,6 +108,16 @@ h4 > span {
     font-size: 1.5rem;
     text-align: right;
     margin: 0px;
+}
+
+h4 > span {
+    font-family: Inter;
+    font-size: 1.5rem;
+    font-weight: 500;
+    letter-spacing: 0em;
+    text-align: right;
+    margin: 0px;
+    color: #fff;  
 }
 
 .seperating-line    {
