--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ h5  {
     align-items: center;
     margin-bottom: 1.125rem;
     padding: 0px;
+
 }
 
 h4  {
@@ -98,9 +99,10 @@ h4  {
     text-align: left;
     color: #F5F5F5;
     margin: 0px;
+    line-height: 2.5rem;
 }
 
-#item-cost  {
+#currency  {
     color: #9b8e8e;
     font-family: 'Inter';
     font-style: normal;
@@ -110,14 +112,14 @@ h4  {
     margin: 0px;
 }
 
-h4 > span {
+#price-el {
     font-family: Inter;
     font-size: 1.5rem;
     font-weight: 500;
     letter-spacing: 0em;
     text-align: right;
     margin: 0px;
-    color: #fff;  
+    color: #fff;
 }
 
 .seperating-line    {
